SoftBank Emoji are not transformed by shaping when in a run of their own https://bugs.webkit.org/show_bug.cgi?id=145569 <rdar://problem/20671711>

Reviewed by Dean Jackson.

Normally, we don't perform shaping on single glyphs. However, these particular codepoints
need to have shaping run on them, even if they are alone.

Test: fast/text/softbank-emoji.html Note that this test may fail in different locales on
different platforms. This patch disables the test on iOS.

* Source/WebCore/platform/graphics/WidthIterator.cpp:
(WebCore::applyFontTransforms): Move the length-of-1 check into shouldApplyFontTransforms()
(WebCore::shouldApplyFontTransforms): Return true if we have one of these emoji characters in
a run of its own
(WebCore::advanceInternal): Keep track of the previous character, and use it to call
shouldApplyFontTransforms.
* Source/WebCore/platform/graphics/WidthIterator.h: shouldApplyFontTransforms() needs
some more information to perform its duties.

Canonical link: https://commits.webkit.org/163659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185175 268f45cc-cd09-0410-ab3c-d52691b4dbfc